# aiap20-technical-assessment

./: .gitignore  DEPENDENCY_MANAGEMENT_RESOLUTION.md  PROJECT_BRIEF_COMPLIANCE_ASSESSMENT.md  README.md  github_actions_verification_report.md  main.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  subscription_predictions.csv
.github/: github-actions.yml
ai-docs/: techContext.md
data/raw/: analyze_raw-db.py  download_db.py
data/results/: evaluation_summary.json  subscription_predictions.csv
docs/: Phase8-Cleanup-Summary.md  Phase8-File-Organization-Summary.md  Phase9-Updates-Summary.md  README-Cleanup-Summary.md
docs/final-summaries/: Phase11-Executive-Summary.md  Phase8-Final-Summary.md
docs/stakeholder-reports/: Phase11-Stakeholder-Presentation.md  Phase8-Stakeholder-Presentation.md
notebook/: eda.ipynb  eda.py
optimized_models/: README.md  hyperparameter_configs.json  optimization_results.json
specs/: FINAL-REPORT.md  PLANNING.md  TASKS.md  raw-db-structure.md
specs/ai-docs/: productContext.md  projectBrief.md  systemPatterns.md
specs/docs/: data_loader_implementation.md  phase7-tdd-implementation.md
specs/examples/: data_loader_demo.py
specs/output/: Feature-Processing_Summary.html  Phase10-report.md  Phase11-report.md  Phase6-report.md  Phase7-report.md  Phase8-report.md  Phase9-report.md  eda-figures.md  eda-report.md  evaluation_summary.json  executive_summary.md  feature_importance_analysis.json  model_evaluation_report.json  phase3-report.md  phase4-report.md  phase5-report.md  phase5-step3-testing-report.md  phase7-step2-report.md  phase7-step3-test-results.json  phase8-evaluation-report.md
src/data/: data_loader.py
src/data_integration/: __init__.py  csv_loader.py  data_access.py  data_validator.py  pipeline_utils.py
src/feature_engineering/: __init__.py  business_features.py  feature_engineer.py  pipeline.py  transformations.py
src/model_evaluation/: __init__.py  business_calculator.py  comparator.py  deployment_validator.py  ensemble_evaluator.py  evaluator.py  feature_analyzer.py  performance_monitor.py  pipeline.py  reporter.py  visualizer.py
src/model_optimization/: __init__.py  business_criteria_optimizer.py  deployment_feasibility_validator.py  ensemble_optimizer.py  ensemble_validator.py  feature_optimizer.py  performance_monitor.py  (+2 more)
tests/: ACTUAL_DATA_TESTING_REPORT.md  PHASE11_STEP1_TESTING_SUMMARY.md  PHASE11_STEP2_IMPLEMENTATION_SUMMARY.md  PHASE2_TESTING_SUMMARY.md  PHASE3_TESTING_SUMMARY.md  PHASE4_TESTING_SUMMARY.md  PHASE5_TESTING_SUMMARY.md  PHASE6_STEP1_TDD_IMPLEMENTATION.md  README.md  __init__.py  conftest.py  run_phase10_step1_tests.py  run_phase11_step1_tests.py  run_phase11_step3_comprehensive.py  run_phase3_tests.py  run_phase4_step3_comprehensive_tests.py  run_phase4_tests.py  run_phase5_tests.py  run_phase6_tests.py  run_phase7_step1_tests.py  run_phase7_step3_comprehensive_tests.py  run_phase8_step1_tests.py  run_phase8_step3_comprehensive_tests.py  run_phase9_step1_tests.py  run_phase9_step3_comprehensive.py  run_tests.py  test_actual_data_scale.py  test_actual_data_validation.py  validate_phase11_step1.py  verify_phase6_step1.py
trained_models/: README.md  gradientboosting_model.pkl  logisticregression_model.pkl  model_performance.json  naivebayes_model.pkl  performance_metrics.json  training_results.json
(+81 files in other folders)
